--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <h4>PHARRELL WILLIAMS</h2>
+          <h4>PHARRELL WILLIAMS</h4>
           <!-- Level 2 'HAPPY' Header -->
           <h2>HAPPY</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4>| FROM DESPICABLE ME 2</h3>
+          <h4>| FROM DESPICABLE ME 2 |</h4>
         </div>
       </div>
 
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+          <h3>| FROM DESPICABLE ME 2 |</h3>
         <!-- Level 1 'HAPPY' Header -->
-
+          <h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+          <h3>WRITTEN BY <span>PHARRELL WILLIAMS</span></h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
